--- a/Route_Buddy/index.html
+++ b/Route_Buddy/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Route Buddy</title>
-    <link rel="stylesheet" href="Home_Page.css">
+    <link rel="stylesheet" href="index.css">
     <link href="shepherd.css" rel="stylesheet">
 </head>
 <body>
